# aros-core

./: Cargo.toml  LICENSE  README.md  build.rs
src/: event_log.rs  lib.rs  uniffi_bridge.rs  uniffi_interface.udl
src/ai/: mod.rs
src/asr/: mod.rs  parser.rs
src/audio/: mod.rs
src/ble/: mod.rs
src/cmd/: mod.rs
src/config/: mod.rs
src/i18n/: mod.rs
src/memory/: mod.rs
src/net/: mod.rs
src/state/: mod.rs
src/tools/: mod.rs
src/translate/: mod.rs
tests/: engine_test.rs
